Fixed issue with Task1B and Task1C

--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -36,6 +36,8 @@ jobs:
       - name: Run Deliverable 1 code
         run: |
           python Task1A.py
+          python Task1B.py
+          python Task1C.py
           python Task1D.py
           python Task1E.py
 
